# Iona-OS-Phone

./: LICENSE  README.md  zk_identity_circuit.rs
backend/: .env  server.py  server_backup.py
backend/tests/: conftest.py  test_iona_api.py
config/: control-api-manifest.json  control-endpoints.json  dashboard-manifest.json  fleet-control.json  maintenance-windows.json  operator-cockpit.json  operator-timeline.json  operator-workspace.json  ops-console.json  release-orchestration.json  resilience-drills.json  runtime-metrics.json  service-mesh.json
frontend/: app.json  package.json
frontend/app/: _layout.tsx  index.tsx  onboarding.tsx
frontend/app/(os)/: _layout.tsx  advanced.tsx  browser.tsx  calculator.tsx  calendar.tsx  camera.tsx  cognitive.tsx  (+19 more)
frontend/src/: theme.ts
imports/: external_bundle_real_contact.json
src/: crypto.rs  slashing.rs  tests.rs  types.rs
src/acpi/: mod.rs  power.rs
src/debug/: backtrace.rs  crashdump.rs  dmesg.rs  mod.rs  trace.rs
src/elf/: dynlink.rs  mod.rs
src/io/: audit_log.rs  dev_random.rs  dmesg.rs  font.rs  font_data.rs  framebuffer.rs  klog.rs  mod.rs  mp3_decode.rs  png_decode.rs  serial.rs  uart.rs
src/mm/: mmap.rs  mod.rs  shm.rs
src/monitor/: mod.rs
src/pci/: mod.rs
src/signal/: mod.rs
src/smp/: mod.rs  scheduler.rs
src/task/: context.rs  mod.rs  monitor.rs
src/zkevm/: prover.rs
targets/: aarch64-iona-none.json
userspace/iona-shell/: Cargo.toml
userspace/iona-shell/src/: main.rs
userspace/iona-utils/: Cargo.toml
userspace/iona-utils/src/: main.rs
userspace/iona-wasm-hello/: Cargo.toml
(+17 files in other folders)
